Add ability to reject versions by regular expression (#679)
For each module, it is now possible to exclude some versions from
upgrades, for example:

```gradle
tasks.named("updateVersionCatalogs") {
    rejectedVersionsPerModule['awesome.lib:awesome'] = '3[.]0.[8-9]'
}
```